--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,16 +1,13 @@
 * {
-    border: none;
-    border-radius: 0;
-    /* `otf-font-awesome` is required to be installed for icons */
-    font-family: "JetBrainsMono Nerd Font";
+    font-family: JetBrainsMono NF;
     font-size: 14px;
-    min-height: 0;
+    font-weight: bold;
 }
 
 window#waybar {
-    background-color: #0a0a0a;
-    /* border-bottom: 3px solid #0a0a0a; */
-    color: #9a9a9a;
+    background-color: #24283b;
+    border-bottom: 6px solid #1f2230;
+    color: #c6d0f5;
     transition-property: background-color;
     transition-duration: .5s;
 }
@@ -28,42 +25,38 @@ window#waybar.solo {
 }
 */
 
-window#waybar.termite {
-    background-color: #84a0c6;
-}
-
-window#waybar.chromium {
-    background-color: #0a0a0a;
+button {
+    all: unset;
+    background-color: #85c1dc;
+    color: #282828;
     border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-left: 4px;
+    margin-bottom: 2px;
+    font-family: JetBrainsMono NF;
+    font-weight: bold;
+    font-size: 14px;
+    padding-left: 15px;
+    padding-right: 15px;
+    transition: transform 0.1s ease-in-out;
 }
 
-#workspaces button {
-    padding: 0 5px;
-    background-color: transparent;
-    color: #9a9a9a;
-    /* Use box-shadow instead of border so the text isn't offset */
-    box-shadow: inset 0 -3px transparent;
+button:hover {
+    background: inherit;
+    background-color: #90cce7;
+    border-bottom: 6px solid #7ab6d1;
 }
 
-/* https://github.com/Alexays/Waybar/wiki/FAQ#the-workspace-buttons-have-a-strange-hover-effect */
-#workspaces button:hover {
-    background: #84a0c6;
-    box-shadow: inset 0 -3px #9a9a9a;
-}
-
-#workspaces button.focused {
-    background-color: #6b7089;
-    color: #9a9a9a;
-    box-shadow: inset 0 -3px #9a9a9a;
-}
-
-#workspaces button.urgent {
-    background-color: #e27878;
+button.active {
+    background: inherit;
+    background-color: #9bd7f2;
+    border-bottom: 6px solid #85c1dc;
 }
 
 #mode {
-    background-color: #0a0a0a;
-    border-bottom: 2px solid #9a9a9a;
+    background-color: #64727D;
+    border-bottom: 3px solid #ffffff;
 }
 
 #clock,
@@ -75,14 +68,17 @@ window#waybar.chromium {
 #backlight,
 #network,
 #pulseaudio,
+#wireplumber,
 #custom-media,
 #tray,
 #mode,
 #idle_inhibitor,
+#scratchpad,
+#custom-swaync,
+#custom-menu,
 #mpd {
     padding: 0 10px;
-    margin: 0 4px;
-    color: #9a9a9a;
+    color: #ffffff;
 }
 
 #window,
@@ -100,18 +96,71 @@ window#waybar.chromium {
     margin-right: 0;
 }
 
+#window {
+    background-color: #414559;
+    color: #c6d0f5;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #323648;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    padding-left: 10px;
+    padding-right: 10px;
+}
+
+#custom-swaync {
+    background-color: #85c1dc;
+    color: #282828;
+    font-family: JetBrainsMono NF;
+    font-size: 18px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    padding-left: 13px;
+    padding-right: 9px;
+}
+
+#custom-powermenu {
+    background-color: #e78284;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 22px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #cf6c70;
+    border-radius: 5px;
+    margin-bottom: 2px;
+    margin-right: 4px;
+    padding-left: 14px;
+    padding-right: 7px;
+}
+
 #clock {
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #battery {
-    background-color: #0a0a0a;
-    color: #9a9a9a;
-}
-
-#battery.charging, #battery.plugged {
-    color: #9a9a9a;
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 @keyframes blink {
@@ -122,52 +171,95 @@ window#waybar.chromium {
 }
 
 #battery.critical:not(.charging) {
-    background-color: #e27878;
-    color: #9a9a9a;
-    animation-name: blink;
-    animation-duration: 0.5s;
-    animation-timing-function: linear;
-    animation-iteration-count: infinite;
-    animation-direction: alternate;
+    background-color: #e78284;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #cf6c70;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 label:focus {
-    background-color: #0a0a0a;
+    background-color: #000000;
 }
 
 #cpu {
-    background-color: #0a0a0a;
-    color: #9a9a9a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #memory {
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #disk {
-    background-color: #0a0a0a;
+    background-color: #964B00;
 }
 
 #backlight {
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #network {
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
 }
 
 #network.disconnected {
-    background-color: #e27878;
+    background-color: #f53c3c;
 }
 
 #pulseaudio {
-    background-color: #0a0a0a;
-    color: #9a9a9a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
+/*
 #pulseaudio.muted {
-    background-color: #e27878;
-    color: #0a0a0a;
+    background-color: #90b1b1;
+    color: #2a5c45;
+}
+*/
+
+#wireplumber {
+    background-color: #fff0f5;
+    color: #000000;
+}
+
+#wireplumber.muted {
+    background-color: #f53c3c;
 }
 
 #custom-media {
@@ -185,15 +277,23 @@ label:focus {
 }
 
 #temperature {
-    background-color: #e2a478;
+    background-color: #f0932b;
 }
 
 #temperature.critical {
-    background-color: #e27878;
+    background-color: #eb4d4b;
 }
 
 #tray {
-    background-color: #0a0a0a;
+    background-color: #444b6a;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #32344a;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #tray > .passive {
@@ -202,16 +302,24 @@ label:focus {
 
 #tray > .needs-attention {
     -gtk-icon-effect: highlight;
-    background-color: #e27878;
+    background-color: #eb4d4b;
 }
 
 #idle_inhibitor {
-    background-color: #0a0a0a;
+    background-color: #85c1dc;
+    color: #232634;
+    font-family: JetBrainsMono NF;
+    font-size: 15px;
+    font-weight: bold;
+    border: none;
+    border-bottom: 6px solid #6fabc6;
+    border-radius: 5px;
+    margin-bottom: 2px;
 }
 
 #idle_inhibitor.activated {
-    background-color: #84a0c6;
-    color: #0a0a0a;
+    background-color: #ecf0f1;
+    color: #232634;
 }
 
 #mpd {
@@ -253,4 +361,37 @@ label:focus {
 
 #keyboard-state > label.locked {
     background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad {
+    background: rgba(0, 0, 0, 0.2);
+}
+
+#scratchpad.empty {
+	background-color: transparent;
+}
+
+tooltip {
+  background-color: #292c3c;
+  border: none;
+  border-bottom: 6px solid #1f2230;
+  border-radius: 5px;
+}
+
+tooltip decoration {
+  box-shadow: none;
+}
+
+tooltip decoration:backdrop {
+  box-shadow: none;
+}
+
+tooltip label {
+  color: #c6d0f5;
+  font-family: JetBrainsMono NF;
+  font-size: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+  padding-top: 0px;
+  padding-bottom: 5px;
 }
