giving hyprland another chance on laptop

--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -5,7 +5,7 @@
 }
 
 window#waybar {
-    background-color: #24283b;
+    background-color: #1a1b26;
     border-bottom: 6px solid #1f2230;
     color: #c6d0f5;
     transition-property: background-color;
