--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -5,8 +5,8 @@
 }
 
 window#waybar {
-    background-color: #1a1b26;
-    border-bottom: 6px solid #1f2230;
+    background-color: transparent; /* #1a1b26; */
+    /* border-bottom: 6px solid transparent;  #1f2230; */
     color: #c6d0f5;
     transition-property: background-color;
     transition-duration: .5s;
@@ -27,10 +27,10 @@ window#waybar.solo {
 
 button {
     all: unset;
-    background-color: #85c1dc;
-    color: #282828;
+    background-color: #1a1b26;
+    color: #a9b1d6;
     border: none;
-    border-bottom: 6px solid #6fabc6;
+    border-bottom: 6px solid #1f2230;
     border-radius: 5px;
     margin-left: 4px;
     margin-bottom: 2px;
@@ -41,14 +41,15 @@ button {
 
 button:hover {
     background: inherit;
-    background-color: #90cce7;
-    border-bottom: 6px solid #7ab6d1;
+    background-color: #7aa2f7;
+    border-bottom: 6px solid #7da6ff;
+    color: #15161E;
 }
 
 button.active {
     background: inherit;
-    background-color: #9bd7f2;
-    border-bottom: 6px solid #85c1dc;
+    background-color: #414868;
+    border-bottom: 6px solid #a9b1d6;
 }
 
 #mode {
@@ -78,7 +79,6 @@ button.active {
     color: #ffffff;
 }
 
-#window,
 #workspaces {
     margin: 0 4px;
 }
@@ -93,6 +93,21 @@ button.active {
     margin-right: 0;
 }
 
+#window,
+#tray{
+    background-color: #1a1b26;
+    color: #a9b1d6;
+    border: none;
+    border-bottom: 6px solid #1f2230;
+    border-radius: 5px;
+    margin-left: 4px;
+    margin-bottom: 2px;
+    padding-left: 15px;
+    padding-right: 15px;
+    transition: transform 0.1s ease-in-out;
+}
+
+/*
 #window {
     background-color: #444b6a;
     color: #c6d0f5;
@@ -112,6 +127,7 @@ button.active {
     border-radius: 5px;
     margin-bottom: 2px;
 }
+*/
 
 #custom-powermenu {
     background-color: #e78284;
@@ -134,10 +150,10 @@ button.active {
 #backlight,
 #pulseaudio,
 #idle_inhibitor {
-    background-color: #85c1dc;
-    color: #232634;
+    background-color: #1a1b26;
+    color: #a9b1d6;
     border: none;
-    border-bottom: 6px solid #6fabc6;
+    border-bottom: 6px solid #1f2230;
     border-radius: 5px;
     margin-bottom: 2px;
 }
