--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -2,311 +2,55 @@
     font-family: JetBrainsMono NF;
     font-size: 14px;
     font-weight: normal;
+    min-height: 0;
 }
 
 window#waybar {
-    background-color: transparent; /* #1a1b26; */
-    /* border-bottom: 6px solid transparent;  #1f2230; */
-    color: #c6d0f5;
-    transition-property: background-color;
-    transition-duration: .5s;
-}
-
-window#waybar.hidden {
-    opacity: 0.2;
-}
-
-/*
-window#waybar.empty {
-    background-color: transparent;
-}
-window#waybar.solo {
-    background-color: #FFFFFF;
-}
-*/
-
-button {
-    all: unset;
-    background-color: #1a1b26;
+    background-color: transparent; 
     color: #a9b1d6;
-    border: none;
-    border-bottom: 6px solid #1f2230;
-    border-radius: 5px;
-    margin-left: 4px;
+}
+
+#workspaces{
+    margin-top: 3px;
     margin-bottom: 2px;
-    padding-left: 15px;
-    padding-right: 15px;
-    transition: transform 0.1s ease-in-out;
+    margin-right: 10px;
+    margin-left: 25px;
 }
 
-button:hover {
-    background: inherit;
-    background-color: #7aa2f7;
-    border-bottom: 6px solid #7da6ff;
-    color: #15161E;
+#workspaces button{
+    border-radius: 15px;
+    margin-right: 10px;
+    padding: 1px 10px;
+    font-weight: bolder;
+    background-color: #1a1b26;
 }
 
-button.active {
-    background: inherit;
-    background-color: #414868;
-    border-bottom: 6px solid #a9b1d6;
+#workspaces button.active, #workspaces button.focused{
+    padding: 0 22px;
+    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;   */ 
+    background: #7aa2f7;
+    color: #1a1b26;
 }
 
-#mode {
-    background-color: #64727D;
-    border-bottom: 3px solid #ffffff;
-}
-
-#clock,
-#battery,
-#cpu,
-#memory,
-#disk,
-#temperature,
-#backlight,
-#network,
-#pulseaudio,
-#wireplumber,
-#custom-media,
 #tray,
-#mode,
-#idle_inhibitor,
-#scratchpad,
-#custom-swaync,
-#custom-menu,
-#mpd {
-    padding: 0 10px;
-    color: #ffffff;
-}
-
-#workspaces {
-    margin: 0 4px;
-}
-
-/* If workspaces is the leftmost module, omit left margin */
-.modules-left > widget:first-child > #workspaces {
-    margin-left: 0;
-}
-
-/* If workspaces is the rightmost module, omit right margin */
-.modules-right > widget:last-child > #workspaces {
-    margin-right: 0;
-}
-
-#window,
-#tray{
-    background-color: #1a1b26;
-    color: #a9b1d6;
-    border: none;
-    border-bottom: 6px solid #1f2230;
-    border-radius: 5px;
-    margin-left: 4px;
-    margin-bottom: 2px;
-    padding-left: 15px;
-    padding-right: 15px;
-    transition: transform 0.1s ease-in-out;
-}
-
-/*
-#window {
-    background-color: #444b6a;
-    color: #c6d0f5;
-    border: none;
-    border-bottom: 6px solid #32344a;
-    border-radius: 5px;
-    margin-bottom: 2px;
-    padding-left: 10px;
-    padding-right: 10px;
-}
-
-#tray {
-    background-color: #444b6a;
-    color: #c6d0f5;
-    border: none;
-    border-bottom: 6px solid #32344a;
-    border-radius: 5px;
-    margin-bottom: 2px;
-}
-*/
-
-#custom-powermenu {
-    background-color: #e78284;
-    color: #232634;
-    border: none;
-    border-bottom: 6px solid #cf6c70;
-    border-radius: 5px;
-    margin-bottom: 2px;
-    margin-right: 4px;
-    padding-left: 14px;
-    padding-right: 7px;
-}
-
-#clock,
-#network,
-#battery,
-#cpu,
+#mpd,
+#custom-weather,
+#cpu, 
+#temperature, 
 #memory,
+#sway-mode,
+#backlight, 
+#pulseaudio, 
+#custom-vpn,
 #disk,
-#backlight,
-#pulseaudio,
-#idle_inhibitor {
-    background-color: #1a1b26;
-    color: #a9b1d6;
-    border: none;
-    border-bottom: 6px solid #1f2230;
-    border-radius: 5px;
-    margin-bottom: 2px;
-}
-
-@keyframes blink {
-    to {
-        background-color: #ffffff;
-        color: #000000;
-    }
-}
-
-#battery.critical:not(.charging) {
-    background-color: #e78284;
-    color: #232634;
-    font-family: JetBrainsMono NF;
-    font-size: 15px;
-    font-weight: bold;
-    border: none;
-    border-bottom: 6px solid #cf6c70;
-    border-radius: 5px;
-    margin-bottom: 2px;
-}
-
-label:focus {
-    background-color: #000000;
-}
-
-#network.disconnected {
-    background-color: #f53c3c;
-}
-
-/*
-#pulseaudio.muted {
-    background-color: #90b1b1;
-    color: #2a5c45;
-}
-*/
-
-#wireplumber {
-    background-color: #fff0f5;
-    color: #000000;
-}
-
-#wireplumber.muted {
-    background-color: #f53c3c;
-}
-
-#custom-media {
-    background-color: #66cc99;
-    color: #2a5c45;
-    min-width: 100px;
-}
-
-#custom-media.custom-spotify {
-    background-color: #66cc99;
-}
-
-#custom-media.custom-vlc {
-    background-color: #ffa000;
-}
-
-#temperature {
-    background-color: #f0932b;
-}
-
-#temperature.critical {
-    background-color: #eb4d4b;
-}
-
-#tray > .passive {
-    -gtk-icon-effect: dim;
-}
-
-#tray > .needs-attention {
-    -gtk-icon-effect: highlight;
-    background-color: #eb4d4b;
-}
-
-#idle_inhibitor.activated {
-    background-color: #ecf0f1;
-    color: #232634;
-}
-
-#mpd {
-    background-color: #66cc99;
-    color: #2a5c45;
-}
-
-#mpd.disconnected {
-    background-color: #f53c3c;
-}
-
-#mpd.stopped {
-    background-color: #90b1b1;
-}
-
-#mpd.paused {
-    background-color: #51a37a;
-}
-
-#language {
-    background: #00b093;
-    color: #740864;
-    padding: 0 5px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state {
-    background: #97e1ad;
-    color: #000000;
-    padding: 0 0px;
-    margin: 0 5px;
-    min-width: 16px;
-}
-
-#keyboard-state > label {
-    padding: 0 5px;
-}
-
-#keyboard-state > label.locked {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad {
-    background: rgba(0, 0, 0, 0.2);
-}
-
-#scratchpad.empty {
-	background-color: transparent;
-}
-
-tooltip {
-  background-color: #292c3c;
-  border: none;
-  border-bottom: 6px solid #1f2230;
-  border-radius: 5px;
-}
-
-tooltip decoration {
-  box-shadow: none;
-}
-
-tooltip decoration:backdrop {
-  box-shadow: none;
-}
-
-tooltip label {
-  color: #c6d0f5;
-  font-family: JetBrainsMono NF;
-  font-size: 16px;
-  padding-left: 5px;
-  padding-right: 5px;
-  padding-top: 0px;
-  padding-bottom: 5px;
+#custom-recorder,
+#custom-audiorec,
+#battery, 
+#clock, 
+#network {
+  border-radius: 15px;
+  margin-right: 10px;
+  padding: 1px 10px;
+  font-weight: bolder;
+  background-color: #1a1b26;
 }
