--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -27,7 +27,6 @@ window#waybar {
 
 #workspaces button.active, #workspaces button.focused{
     padding: 0 22px;
-    /* box-shadow: rgba(6, 24, 44, 0.4) 0px 0px 0px 2px, rgba(6, 24, 44, 0.65) 0px 4px 6px -1px, rgba(255, 255, 255, 0.08) 0px 1px 0px inset;   */ 
     background: #7aa2f7;
     color: #1a1b26;
 }
@@ -49,7 +48,7 @@ window#waybar {
 #clock, 
 #network {
   border-radius: 15px;
-  margin-right: 10px;
+  margin: 1px 5px;
   padding: 1px 10px;
   font-weight: bolder;
   background-color: #1a1b26;
