--- a/waybar/.config/waybar/style.css
+++ b/waybar/.config/waybar/style.css
@@ -1,55 +1,2 @@
-* {
-    font-family: JetBrainsMono NF;
-    font-size: 14px;
-    font-weight: normal;
-    min-height: 0;
-}
-
-window#waybar {
-    background-color: transparent; 
-    color: #a9b1d6;
-}
-
-#workspaces{
-    margin-top: 3px;
-    margin-bottom: 2px;
-    margin-right: 10px;
-    margin-left: 25px;
-}
-
-#workspaces button{
-    border-radius: 15px;
-    margin-right: 10px;
-    padding: 1px 10px;
-    font-weight: bolder;
-    background-color: #1a1b26;
-}
-
-#workspaces button.active, #workspaces button.focused{
-    padding: 0 22px;
-    background: #7aa2f7;
-    color: #1a1b26;
-}
-
-#tray,
-#mpd,
-#custom-weather,
-#cpu, 
-#temperature, 
-#memory,
-#sway-mode,
-#backlight, 
-#pulseaudio, 
-#custom-vpn,
-#disk,
-#custom-recorder,
-#custom-audiorec,
-#battery, 
-#clock, 
-#network {
-  border-radius: 15px;
-  margin: 1px 5px;
-  padding: 1px 10px;
-  font-weight: bolder;
-  background-color: #1a1b26;
-}
+@import 'colors.css';
+@import 'bubble.css';
