--- a/waybar/.config/waybar/bubble.css
+++ b/waybar/.config/waybar/bubble.css
@@ -1,34 +1,34 @@
 * {
-    font-family: JetBrainsMono NF;
-    font-size: 14px;
-    font-weight: normal;
-    min-height: 0;
+  font-family: JetBrainsMono NF;
+  font-size: 14px;
+  font-weight: normal;
+  min-height: 0;
 }
 
 window#waybar {
-    background-color: transparent; 
-    color: @foreground;
+  background-color: @background; 
+  color: @foreground;
 }
 
 #workspaces{
-    margin-top: 3px;
-    margin-bottom: 2px;
-    margin-right: 10px;
-    margin-left: 25px;
+  margin-top: 3px;
+  margin-bottom: 2px;
+  margin-right: 10px;
+  margin-left: 25px;
 }
 
 #workspaces button{
-    border-radius: 15px;
-    margin-right: 10px;
-    padding: 1px 10px;
-    font-weight: bolder;
-    background-color: @background;
+  border-radius: 15px;
+  margin-right: 8px;
+  padding: 1px 8px;
+  font-weight: bolder;
+  background-color: @color8;
 }
 
 #workspaces button.active, #workspaces button.focused{
-    padding: 0 22px;
-    background: @highlight;
-    color: @background;
+  padding: 0 22px;
+  background: @highlight;
+  color: @background;
 }
 
 #tray,
