--- a/wofi/.config/wofi/style.css
+++ b/wofi/.config/wofi/style.css
@@ -1,7 +1,7 @@
 window {
     margin: 2px;
-    border: 3px solid #7aa2f7;
-    background-color: #7aa2f7;
+    border: 3px solid #;
+    background-color: #1a1b26;
     border-radius: 8px;
 }
 
