--- a/hypr/.config/waybar/bubble.css
+++ b/hypr/.config/waybar/bubble.css
@@ -10,24 +10,47 @@ window#waybar {
   color: @foreground;
 }
 
-#workspaces{
-  border-radius: 8px 0px 0px 8px;
+.modules-left {
+  border-radius: 8px;
   margin: 2px 0px 2px 20px;
-  padding: 2px 0px 2px 15px;
+  padding: 0px 15px;
+  background-color: @background;
+  font-size: 14px;
+}
+
+.modules-center {
+  border-radius: 8px;
+  margin: 2px 0px;
+  padding: 0px 15px;
+  background-color: @background;
+  font-size: 14px;
+}
+
+.modules-right {
+  border-radius: 8px;
+  margin: 2px 20px 2px 0px;
+  padding: 0px 15px;
+  background-color: @background;
+  font-size: 14px;
+}
+
+#workspaces{
+  margin: 0px;
+  padding: 0px;
   background-color: @background;
 }
 
 #workspaces button{
-  border-radius: 8px;
-  margin: 0px 8px 0px 0px;
-  padding: 2px 8px;
+  border-radius: 6px;
+  margin: 4px 8px 4px 0px;
+  padding: 0px 8px;
   background-color: @color8;
-  font-size: 12px;
+  font-size: 10px;
   font-weight: normal;
 }
 
 #workspaces button.active, #workspaces button.focused{
-  padding: 2px 22px;
+  padding: 2px 20px;
   background: @highlight;
   color: @background;
 }
@@ -39,27 +62,9 @@ window#waybar {
   padding: 2px 20px 2px 18px;
 }
 
-#clock {
-  background-color: @background;
-  border-radius: 8px;
-  margin: 1px 0px 1px 0px;
-  padding: 2px 15px;
-} 
-
-#battery {
-  background-color: @background;
-  border-radius: 0px 8px 8px 0px;
-  margin: 1px 18px 1px 0px;
-  padding: 1px 8px;
-}
-
-#tray {
-  background-color: @background;
-  border-radius: 8px 0px 0px 8px;
-  margin: 1px 0px 1px 0px;
-  padding: 1px 8px 1px 15px;
-}
-
+#clock,
+#battery,
+#tray,
 #mpd,
 #custom-weather,
 #cpu, 
@@ -73,15 +78,13 @@ window#waybar {
 #custom-recorder,
 #custom-audiorec,
 #network {
-  /* border-radius: 15px; */
-  margin: 1px 0px 1px 0px;
-  padding: 1px 8px;
-  background-color: @background;
+  margin: 0px 8px;
+  padding: 0px;
 }
 
 tooltip {
     background: @background;
     color: @foreground;
-    border-radius: 7px;
+    border-radius: 8px;
     border-width: 0px;
 }
