--- a/hypr/.config/waybar/styles/roundedbar.css
+++ b/hypr/.config/waybar/styles/roundedbar.css
@@ -6,7 +6,7 @@
 }
 
 window#waybar {
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: @background; 
   color: @foreground;
   margin: 0px 20px 0px 20px;
   padding: 0px;
