--- a/hypr/.config/waybar/styles/bubble.css
+++ b/hypr/.config/waybar/styles/bubble.css
@@ -7,14 +7,14 @@
 
 window#waybar {
   background-color: transparent; 
-  color: @foreground;
+  color: rgba(255, 255, 255, 0.8);
 }
 
 .modules-left {
   border-radius: 8px;
   margin: 2px 0px 2px 20px;
   padding: 0px 15px;
-  background-color: @background;
+  background-color: rgba(255, 255, 255, 0.1);
   font-size: 14px;
 }
 
@@ -22,7 +22,7 @@ window#waybar {
   border-radius: 8px;
   margin: 2px 0px;
   padding: 0px 15px;
-  background-color: @background;
+  background-color: rgba(255, 255, 255, 0.1);
   font-size: 14px;
 }
 
@@ -30,7 +30,7 @@ window#waybar {
   border-radius: 8px;
   margin: 2px 20px 2px 0px;
   padding: 0px 0px 0px 15px;
-  background-color: @background;
+  background-color: rgba(255, 255, 255, 0.1);
   font-size: 14px;
 }
 
@@ -41,22 +41,22 @@ window#waybar {
 
 #workspaces button{
   border-radius: 6px;
-  margin: 4px 8px 4px 0px;
-  padding: 0px 8px;
-  background-color: @color8;
+  margin: 2px 2px 2px 0px;
+  padding: 0px 2px;
+  background-color: rgba(255, 255, 255, 0.1);
   font-size: 10px;
   font-weight: normal;
 }
 
 #workspaces button.active, #workspaces button.focused{
-  padding: 2px 15px;
-  background: @highlight;
-  color: @background;
+  padding: 0px 2px;
+  background-color: rgba(255, 255, 255, 0.4);
+  color: rgba(255, 255, 255, 1);
 }
 
 #tray {
   border-radius: 8px;
-  background-color: @color8;
+  background-color: rgba(200, 200, 200, 0.2);
   margin: 0px 0px 0px 15px;
   padding: 0px 10px;
 }
