--- a/hypr/.config/waybar/styles/solid.css
+++ b/hypr/.config/waybar/styles/solid.css
@@ -1,13 +1,11 @@
-@define-color foreground #ffffff;
-@define-color background #000000;
-@define-color tooltipbg #1a1a1a;
-@define-color tooltip #aaaaaa;
-@define-color workspacesbg #1a1a1a;
-@define-color workspacebuttonbg #0a0a0a;
-@define-color workspacesactivebg #3a3a3a;
-@define-color workspacesactivefg #fafafa;
-@define-color traybg #1a1a1a;
-@define-color tray #aaaaaa;
+@define-color foreground #c0caf5;
+@define-color background #1a1b26;
+@define-color tooltipbg #1a1b26;
+@define-color workspacesbg #414868;
+@define-color workspacebuttonbg #15161E;
+@define-color workspacesactivebg #7aa2f7;
+@define-color workspacesactivefg #1a1b26;
+@define-color traybg #414868;
 
 * {
   font-family: JetBrainsMono NF;
