--- a/hypr/.config/waybar/styles/solid.css
+++ b/hypr/.config/waybar/styles/solid.css
@@ -1,11 +1,11 @@
-@define-color foreground #c0caf5;
-@define-color background #1a1b26;
-@define-color tooltipbg #1a1b26;
-@define-color workspacesbg #414868;
-@define-color workspacebuttonbg #15161E;
-@define-color workspacesactivebg #7aa2f7;
-@define-color workspacesactivefg #1a1b26;
-@define-color traybg #414868;
+@define-color foreground #cacaca;
+@define-color background #000000;
+@define-color tooltipbg #1a1a1a;
+@define-color workspacesbg #1a1a1a;
+@define-color workspacebuttonbg #1a1a1a;
+@define-color workspacesactivebg #cacaca;
+@define-color workspacesactivefg #0a0a0a;
+@define-color traybg #2a2a2a;
 
 * {
   font-family: JetBrainsMono NF;
