--- a/hypr/.config/waybar/styles/solid.css
+++ b/hypr/.config/waybar/styles/solid.css
@@ -1,11 +1,11 @@
 @define-color foreground #cacaca;
-@define-color background #000000;
+@define-color background #0a0a0a;
 @define-color tooltipbg #0a0a0a;
-@define-color workspacesbg #1a1a1a;
+@define-color workspacesbg #2a2a2a;
 @define-color workspacebuttonbg #1a1a1a;
 @define-color workspacesactivebg #cacaca;
 @define-color workspacesactivefg #0a0a0a;
-@define-color traybg #1a1a1a;
+@define-color traybg #2a2a2a;
 
 * {
   font-family: JetBrainsMono NF;
